# beacon-py

./: .gitignore  404.html  README.md  generate_stubs.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py  versions.json
.github/workflows/: docs.yaml  nightly.yaml  release.yaml
1.0.10/changelog/: index.html
1.0.10/getting_started/: index.html
1.0.10/installation/: index.html
1.0.12/: objects.inv
1.0.12/examples/wod/: index.html
1.0.12/reference/functions/: index.html
1.0.12/using/exploring/: index.html
1.0.12/using/querying/: index.html
1.0.13/: 404.html  index.html
1.0.13/reference/client/: index.html
1.0.13/reference/query/: index.html
1.0.13/reference/table/: index.html
1.0.13/search/: search_index.json
1.0.13/using/tables/: index.html
1.0.8/: 404.html  index.html
1.0.8/changelog/: index.html
1.0.8/examples/wod/: index.html
1.0.8/getting_started/: index.html
1.0.8/installation/: index.html
1.0.8/reference/client/: index.html
1.0.8/reference/functions/: index.html
1.0.8/reference/query/: index.html
1.0.8/reference/table/: index.html
1.0.8/using/exploring/: index.html
1.0.8/using/querying/: index.html
1.0.8/using/tables/: index.html
1.1.0/: objects.inv
1.1.0/changelog/: index.html
1.1.0/examples/wod/: index.html
1.1.0/reference/client/: index.html
1.1.0/reference/dataset/: index.html
1.1.0/reference/query/: index.html
1.1.0/search/: search_index.json
1.1.1/reference/client/: index.html
1.1.1/reference/functions/: index.html
1.1.1/using/datasets/: index.html
1.1.2/using/exploring/: index.html
1.1.2/using/querying/: index.html
1.1.3/: 404.html  index.html  objects.inv
1.1.3/getting_started/: index.html
1.1.3/installation/: index.html
1.1.3/reference/client/: index.html
1.1.3/reference/query/: index.html
1.1.3/reference/table/: index.html
1.1.3/search/: search_index.json
1.1.3/using/tables/: index.html
1.2.0/: 404.html  index.html
1.2.0/changelog/: index.html
1.2.0/examples/wod/: index.html
1.2.0/getting_started/: index.html
1.2.0/installation/: index.html
1.2.0/reference/client/: index.html
1.2.0/reference/dataset/: index.html
1.2.0/reference/functions/: index.html
1.2.0/reference/query/: index.html
1.2.0/reference/table/: index.html
1.2.0/search/: search_index.json
1.2.0/using/datasets/: index.html
1.2.0/using/exploring/: index.html
1.2.0/using/querying/: index.html
1.2.0/using/tables/: index.html
beacon_api/: __init__.py  admin_client.py  client.py  dataset.py  query.py  query.pyi  session.py
beacon_api/query/: __init__.py  _from.py  distinct.py  filter.py  output.py
beacon_py/: __init__.py  client.py  table.py  test.ipynb
changelog/: index.html
docs/: changelog.md  getting_started.md  index.md  installation.md
docs/examples/: querying.md  table.md  wod.md
docs/reference/: client.md  dataset.md  functions.md  query.md  table.md
docs/using/: datasets.md  exploring.md  querying.md  tables.md
examples/wod/: index.html
getting_started/: index.html
installation/: index.html
reference/client/: index.html
reference/functions/: index.html
reference/query/: index.html
reference/table/: index.html
search/: search_index.json
using/exploring/: index.html
using/querying/: index.html
using/tables/: index.html
