[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cibuildwheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-api"
version = "1.0.3"  # CI will replace this during nightly build
description = "Python interface wrapper for interacting with Beacon Nodes."
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
authors = [
  { name = "Robin Kooyman", email = "robin@maris.nl" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests>=2.0.0",
  "pandas>=2.0.0",
  "pyarrow >= 19.0.1",
  "networkx >= 3.0.0",
  "matplotlib >= 3.0.0",
  "xarray >= 2025.1.0",
  "netCDF4 >= 1.5.0",
  "geopandas >= 1.1.0",
  "typing_extensions >= 4.10.0",
]

[project.optional-dependencies]
zarr = ["zarr>=2.18"]

# [tool.setuptools]
# packages = ["beacon_api"]  # OR use find if you prefer

[tool.setuptools.packages.find]
include = ["beacon_api*"]

[tool.setuptools.package-data]
"beacon_api" = ["py.typed", "*.pyi"]

[tool.cibuildwheel]
# Build all CPython versions (skip PyPy, Python 3.6)
build = "cp3*-*"
skip = "cp36-* pp*"
